--- a/packages/lib-hera/package.json
+++ b/packages/lib-hera/package.json
@@ -10,7 +10,8 @@
     "build": "rm -rf dist && tsc && tsc-alias",
     "lint": "eslint ./src --ext .ts,.tsx",
     "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
-    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo"
+    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
+    "clean": "rm -rf .dist"
   },
   "dependencies": {
     "useragent": "^2.3.0"
