--- a/apps/fe-rn-atena/package.json
+++ b/apps/fe-rn-atena/package.json
@@ -7,14 +7,14 @@
     "android": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn expo run:android",
     "ios": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn expo run:ios",
     "prebuild": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn expo prebuild",
-    "clean": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn cache clean --force",
     "clean:gradlew": "EXPO_USE_METRO_WORKSPACE_ROOT=1 && cd android && ./gradlew clean",
     "web": "expo start --web",
     "lint": "eslint ./ --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "reset": "rm -rf ios && rm -rf android && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
     "build": "echo 'No build script found'",
-    "start": "echo 'No build script found'"
+    "start": "echo 'No build script found'",
+    "clean": "echo 'No build script found'"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
