--- a/packages/gateway-eros/package.json
+++ b/packages/gateway-eros/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "lint": "eslint ./src --ext .ts,.tsx",
     "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
-    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo"
+    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
+    "clean": "rm -rf .dist"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
