--- a/packages/kafka-persefone/package.json
+++ b/packages/kafka-persefone/package.json
@@ -10,7 +10,8 @@
     "build": "rm -rf dist && tsc && tsc-alias",
     "lint": "eslint ./ --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo"
+    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
+    "clean": "rm -rf .dist"
   },
   "dependencies": {
     "kafkajs": "^2.2.4"
