--- a/packages/lint-zeus/package.json
+++ b/packages/lint-zeus/package.json
@@ -10,7 +10,8 @@
     "build": "echo 'No build script defined'",
     "lint": "echo 'No lint script defined'",
     "lint:fix": "echo 'No lint:fix script defined'",
-    "reset": "echo 'No reset script defined'"
+    "reset": "echo 'No reset script defined'",
+    "clean": "echo 'No clean script defined'"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
