--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -27,6 +27,8 @@
     "mysql": "^2.18.1",
     "stacktrace-js": "^2.0.2",
     "typeorm": "^0.3.20",
+    "@olympus/lib-hera": "*",
+    "@olympus/domain-ceos": "*",
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
