--- a/apps/fe-rn-atena/package.json
+++ b/apps/fe-rn-atena/package.json
@@ -28,6 +28,9 @@
     "react-native": "0.73.4",
     "react-native-random-uuid": "^0.1.4",
     "tailwindcss": "3.3.2",
+    "@olympus/gateway-eros": "*",
+    "@olympus/lib-hera": "*",
+    "@olympus/domain-ceos": "*",
     "vite": "^5.1.1"
   },
   "devDependencies": {
