--- a/apps/be-apolo/tsconfig.json
+++ b/apps/be-apolo/tsconfig.json
@@ -1,11 +1,19 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "moduleResolution": "node",
         "baseUrl": ".",
         "outDir": "./dist",
         "rootDir": "./",
-        "paths": {"@/*": ["src/*"]}
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
     },
-    "exclude": ["node_modules"]
+    "include": [
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
