--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "yarn workspaces run start:dev",
     "clean": "yarn workspaces run clean",
     "apolo:dev": "cd apps/be-apolo && yarn start:dev",
+    "demeter:dev": "cd apps/be-demeter && yarn start:dev",
     "apolo:docker-up": "cd apps/be-apolo && yarn docker-up",
     "apolo:docker-down": "cd apps/be-apolo && yarn docker-down",
     "atena:prebuild": "cd apps/be-apolo && yarn prebuild",
@@ -25,21 +26,24 @@
     "node": ">=v20.9.0"
   },
   "dependencies": {
-    "@olympus/domain-ceos": "*",
-    "@olympus/fe-rn-atena": "*",
-    "@olympus/gateway-eros": "*",
-    "@olympus/kafka-persefone": "*",
-    "@olympus/lib-hera": "*",
+    "@olympus/be-apolo": "1.0.0",
+    "@olympus/be-demeter": "1.0.0",
+    "@olympus/domain-ceos": "1.0.0",
+    "@olympus/fe-rn-atena": "1.0.0",
+    "@olympus/gateway-eros": "1.0.0",
+    "@olympus/kafka-persefone": "1.0.0",
+    "@olympus/lib-hera": "1.0.0",
     "reflect-metadata": "^0.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@olympus/lint-zeus": "*",
+    "@olympus/lint-zeus": "1.0.0",
     "@types/node": "^20.11.16",
     "eslint": "^8.56.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
-    "tsx": "^4.5.1",
+    "tsc-alias": "^1.8.8",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^1.2.2"
   },
