--- a/apps/fe-rn-atena/package.json
+++ b/apps/fe-rn-atena/package.json
@@ -28,15 +28,14 @@
     "react-native": "0.73.4",
     "react-native-random-uuid": "^0.1.4",
     "tailwindcss": "3.3.2",
-    "@olympus/gateway-eros": "*",
-    "@olympus/lib-hera": "*",
-    "@olympus/domain-ceos": "*",
+    "@olympus/gateway-eros": "1.0.0",
+    "@olympus/lib-hera": "1.0.0",
+    "@olympus/domain-ceos": "1.0.0",
     "vite": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^18.2.55",
     "@types/react-native": "^0.73.0"
-  },
-  "private": true
+  }
 }
