--- a/packages/kafka-persefone/package.json
+++ b/packages/kafka-persefone/package.json
@@ -8,26 +8,20 @@
     "start": "echo 'No start script defined'",
     "start:dev": "echo 'No start:dev script defined'",
     "build": "rm -rf dist && tsc && tsc-alias",
-    "lint": "eslint ./ --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
-    "clean": "rm -rf .dist"
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
+    "reset": "rm -rf ./dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
+    "clean": "rm -rf ./dist"
   },
   "dependencies": {
     "kafkajs": "^2.2.4",
-    "@olympus/lib-hera": "*"
+    "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
     "tsc-alias": "^1.8.8",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5.3.3"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "*exports": {
     "./package.json": "./package.json",
