--- a/packages/lib-hera/package.json
+++ b/packages/lib-hera/package.json
@@ -10,24 +10,20 @@
     "build": "rm -rf dist && tsc && tsc-alias",
     "lint": "eslint ./src --ext .ts,.tsx",
     "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
-    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
-    "clean": "rm -rf .dist"
+    "reset": "rm -rf ./dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
+    "clean": "rm -rf ./dist"
   },
   "dependencies": {
-    "useragent": "^2.3.0"
+    "reflect-metadata": "^0.2.1",
+    "useragent": "^2.3.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
     "@types/useragent": "^2.3.4",
     "tsc-alias": "^1.8.8",
-    "tsx": "^4.7.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5.3.3"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "*exports": {
     "./package.json": "./package.json",
