feat: Sending and receiving messages via Kafka/upstash

--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -6,7 +6,7 @@
   "author": "Joisiney Leandro",
   "license": "MIT",
   "scripts": {
-    "start:dev": "node --watch --trace-warnings --env-file=./.env-development --import tsx src/infra/server.ts",
+    "start:dev": "node --watch --trace-warnings --env-file=./.env --import tsx src/infra/server.ts",
     "build": "rm -rf dist && tsc && tsc-alias",
     "start": "node --env-file=./.env-development --import ./dist/src/infra/server.js",
     "lint": "eslint ./ --ext .ts,.tsx",
