--- a/apps/be-apolo/.env-development
+++ b/apps/be-apolo/.env-development
@@ -4,3 +4,7 @@ DATABASE_PORT=3306
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=root
 DATABASE_DATABASE=teste-db
+BROKERS=
+MECHANISM=
+USERNAME=
+PASSWORD=
