--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -20,14 +20,15 @@
     "clean": "rm -rf ./dist"
   },
   "dependencies": {
+    "@olympus/domain-ceos": "1.0.0",
+    "@olympus/lib-hera": "1.0.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
     "fastify": "^4.26.0",
+    "fastify-plugin": "^4.5.1",
     "mysql": "^2.18.1",
     "stacktrace-js": "^2.0.2",
     "typeorm": "^0.3.20",
-    "@olympus/lib-hera": "1.0.0",
-    "@olympus/domain-ceos": "1.0.0",
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
