--- a/apps/fe-rn-atena/package.json
+++ b/apps/fe-rn-atena/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@olympus/domain-ceos": "1.0.0",
+    "@olympus/gateway-eros": "1.0.0",
+    "@olympus/lib-hera": "1.0.0",
     "classnames": "^2.5.1",
     "expo": "~50.0.6",
     "expo-font": "~11.10.2",
@@ -27,10 +30,8 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-random-uuid": "^0.1.4",
+    "socket.io-client": "^4.7.4",
     "tailwindcss": "3.3.2",
-    "@olympus/gateway-eros": "1.0.0",
-    "@olympus/lib-hera": "1.0.0",
-    "@olympus/domain-ceos": "1.0.0",
     "vite": "^5.1.1"
   },
   "devDependencies": {
