--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@olympus/fe-rn-atena": "1.0.0",
     "@olympus/gateway-eros": "1.0.0",
     "@olympus/kafka-persefone": "1.0.0",
+    "@olympus/io-server-pluto": "1.0.0",
     "@olympus/lib-hera": "1.0.0",
     "reflect-metadata": "^0.2.1",
     "zod": "^3.22.4"
