--- a/apps/fe-rn-atena/.env.example
+++ b/apps/fe-rn-atena/.env.example
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_APOLO_API_URL=http://10.0.2.2:3001
+EXPO_PUBLIC_APOLO_API_URL_IOS=http://localhost:3001
+EXPO_PUBLIC_APOLO_API_URL_ANDROID=http://10.0.2.2:3001
