--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@olympus/domain-ceos": "1.0.0",
     "@olympus/lib-hera": "1.0.0",
+    "@olympus/kafka-persefone": "1.0.0",
+    "@olympus/io-server-pluto": "1.0.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
     "fastify": "^4.26.0",
