chore: creating Template Layer and User Page

--- a/apps/fe-rn-atena/tsconfig.json
+++ b/apps/fe-rn-atena/tsconfig.json
@@ -5,11 +5,18 @@
         "strict": true,
         "baseUrl": "./",
         "paths": {
-        "@/*": ["./src/*"],
-        "@assets/*": ["./assets/*"]
+            "@/*": [
+                "./src/*"
+            ],
+            "@assets/*": [
+                "./assets/*"
+            ]
         }
     },
-    "include": ["./src/**/*.ts", "./src/**/*.tsx"],
+    "include": [
+        "./src/**/*.ts",
+        "./src/**/*.tsx"
+    ],
     "exclude": [
         "node_modules"
     ]
