--- a/apps/fe-rn-atena/package.json
+++ b/apps/fe-rn-atena/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start:dev": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn expo start",
+    "start:dev": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn expo start --clear",
     "android": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn expo run:android",
     "ios": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn expo run:ios",
     "prebuild": "EXPO_USE_METRO_WORKSPACE_ROOT=1 yarn expo prebuild",
@@ -21,15 +21,22 @@
     "@olympus/domain-ceos": "1.0.0",
     "@olympus/gateway-eros": "1.0.0",
     "@olympus/lib-hera": "1.0.0",
+    "@react-navigation/native": "^7.0.0-alpha.7",
+    "@react-navigation/native-stack": "^7.0.0-alpha.8",
     "classnames": "^2.5.1",
     "expo": "~50.0.6",
     "expo-font": "~11.10.2",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-random-uuid": "^0.1.4",
+    "react-native-reanimated": "^3.7.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "3.3.2",
     "vite": "^5.1.1"
