--- a/packages/vitest-kairos/tsconfig.json
+++ b/packages/vitest-kairos/tsconfig.json
@@ -5,6 +5,9 @@
         "strict": true,
         "baseUrl": "./",
         "paths": {
+            "@/*": [
+                "./src/*"
+            ],
             "react": [ "./node_modules/@types/react" ]
           }
     },
