--- a/apps/be-demeter/package.json
+++ b/apps/be-demeter/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint ./ --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "reset": "rm -rf ./dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
-    "clean": "rm -rf ./dist"
+    "clean": "rm -rf ./dist",
+    "coverage": "echo 'No build script found'"
   },
   "dependencies": {
     "@olympus/domain-ceos": "1.0.0",
