--- a/packages/gateway-eros/package.json
+++ b/packages/gateway-eros/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint ./src --ext .ts,.tsx",
     "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
     "reset": "rm -rf ./dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
-    "clean": "rm -rf ./dist"
+    "clean": "rm -rf ./dist",
+    "coverage": "echo 'No build script found'"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
