--- a/packages/vitest-kairos/package.json
+++ b/packages/vitest-kairos/package.json
@@ -10,22 +10,23 @@
     "start": " echo 'No start script defined'",
     "build": "echo 'No build script defined'",
     "start:dev": "echo 'No start:dev script defined'",
-    "clean": "echo 'No clean script defined'"
+    "clean": "echo 'No clean script defined'",
+    "coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@olympus/be-apolo": "1.0.0",
+    "@olympus/be-demeter": "1.0.0",
+    "@olympus/domain-ceos": "1.0.0",
+    "@olympus/fe-rn-atena": "1.0.0",
+    "@olympus/gateway-eros": "1.0.0",
+    "@olympus/io-server-pluto": "1.0.0",
+    "@olympus/kafka-persefone": "1.0.0",
+    "@olympus/lib-hera": "1.0.0",
     "@types/react": "^18.2.55",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "@olympus/fe-rn-atena": "1.0.0",
-    "@olympus/be-apolo": "1.0.0",
-    "@olympus/be-demeter": "1.0.0",
-    "@olympus/domain-ceos": "1.0.0",
-    "@olympus/gateway-eros": "1.0.0",
-    "@olympus/kafka-persefone": "1.0.0",
-    "@olympus/io-server-pluto": "1.0.0",
-    "@olympus/lib-hera": "1.0.0"
+    "react-native": "0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +36,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.4.3",
     "@types/react-dom": "^18.0.9",
+    "@vitest/coverage-v8": "^1.3.1",
     "react-test-renderer": "^18.2.0",
     "vitest": "^1.2.2",
     "vitest-react-native": "^0.1.5"
