--- a/packages/be-router-angelo/package.json
+++ b/packages/be-router-angelo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@olympus/lib-hera",
+  "name": "@olympus/be-router-angelo",
   "version": "1.0.0",
   "main": "src/index.ts",
   "author": "Joisiney Leandro",
@@ -15,11 +15,13 @@
     "coverage": "echo 'No build script found'"
   },
   "dependencies": {
-    "reflect-metadata": "^0.2.1",
+    "@olympus/lib-hera": "1.0.0",
+    "useragent": "^2.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
+    "@types/useragent": "^2.3.4",
     "tsc-alias": "^1.8.8",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
