--- a/packages/be-di-ilitia/package.json
+++ b/packages/be-di-ilitia/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "@olympus/be-demeter",
+  "name": "@olympus/be-di-ilitia",
   "version": "1.0.0",
-  "description": "News Producer",
-  "main": "src/infra/server.ts",
+  "main": "src/index.ts",
   "author": "Joisiney Leandro",
   "license": "MIT",
   "scripts": {
-    "start:dev": "node --watch --trace-warnings --env-file=./.env --import tsx src/infra/server.ts",
+    "start": "echo 'No start script defined'",
+    "start:dev": "echo 'No start:dev script defined'",
     "build": "rm -rf dist && tsc && tsc-alias",
-    "start": "node --env-file=./.env-development --import ./dist/src/infra/server.js",
-    "lint": "eslint ./ --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
     "reset": "rm -rf ./dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
     "clean": "rm -rf ./dist",
     "coverage": "echo 'No build script found'"
   },
   "dependencies": {
     "@olympus/be-di-ilitia": "1.0.0",
-    "@olympus/domain-ceos": "1.0.0",
-    "@olympus/kafka-persefone": "1.0.0",
-    "@olympus/lib-hera": "1.0.0",
-    "fastify": "^4.26.1",
-    "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.16",
+    "@types/useragent": "^2.3.4",
+    "tsc-alias": "^1.8.8",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "*exports": {
     "./package.json": "./package.json",
