--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -24,6 +24,7 @@
     "@olympus/domain-ceos": "1.0.0",
     "@olympus/lib-hera": "1.0.0",
     "@olympus/kafka-persefone": "1.0.0",
+    "@olympus/be-di-ilitia": "1.0.0",
     "@olympus/io-server-pluto": "1.0.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
